--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,34 @@ body {
     border-radius: 10px;
     padding: 10px;
 }
+
+.content h2 {
+    font-weight: 900;
+    text-align: center;
+    font-size: 36px;
+    color: #1f2937;
+}
+
+.content {
+    margin: 100px 300px;
+}
+
+.content .cards {
+    display: flex;
+    margin: 50px 0px;
+}
+
+.cards .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.cards .image {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #3882f6;
+    border-radius: 10px;
+}
