--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,21 @@ body {
     border: 2px solid #3882f6;
     border-radius: 10px;
 }
+
+.quotation {
+    background-color: #e5e7eb;
+}
+
+.quotation p {
+    margin: 0px 300px;
+    padding-top: 100px;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.quotation h3 {
+    margin: 0px 300px;
+    text-align: end;
+    padding-bottom: 100px;
+}
