--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,9 @@ body {
 
 .hero .image {
     display: flex;
-    width: 400px;
+    width: 100%;
     background-color: gray;
-    padding: 100px 20px;
+    padding: 120px 20px;
     align-items: center;
     justify-content: center;
     color: #f9faf8;
@@ -114,4 +114,52 @@ body {
     margin: 0px 300px;
     text-align: end;
     padding-bottom: 100px;
+}
+
+.signup {
+    background-color: #3882f6;
+    border-radius: 10px;
+    margin: 100px 200px;
+    padding: 25px 50px;
+    display: flex;
+    gap: 200px;
+}
+
+.signup .text {
+    display: flex;
+    flex-direction: column;
+}
+
+.signup .text .one {
+    color: #f9faf8;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.signup .text .two {
+    color: #e5e7eb;
+}
+
+.signup .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.signup button {
+    background-color: #3882f6;
+    width: 100px;
+    color: #f9faf8;
+    border-radius: 10px;
+    padding: 10px;
+    border: 2px solid #e5e7eb;
+    font-weight: 700;
+}
+
+.footer {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f9faf8;
 }
